--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -19,13 +19,12 @@
         app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/questionView"
         android:layout_width="348dp"
-        android:layout_height="118dp"
+        android:layout_height="130dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/questions"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
         android:textStyle="bold|italic"
@@ -40,9 +39,15 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:foregroundTint="@color/colorPrimaryDark"
+        android:indeterminate="true"
+        android:progress="@android:integer/config_shortAnimTime"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/questionView"
+        tools:foregroundTint="@color/colorPrimaryDark"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView3"
