--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -8,11 +8,13 @@
 
     <TextView
         android:id="@+id/textView6"
+        android:background="@color/colorOption"
         android:layout_width="200dp"
-        android:layout_height="65dp"
+        android:layout_height="100dp"
         android:layout_marginStart="6dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="32dp"
         android:text="@string/textview"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toStartOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +25,7 @@
         android:layout_width="348dp"
         android:layout_height="130dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:textColor="@color/colorAccent"
         android:textSize="18sp"
@@ -52,10 +54,11 @@
     <TextView
         android:id="@+id/textView3"
         android:layout_width="200dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="160dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="6dp"
         android:text="@string/textview"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
@@ -64,10 +67,11 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="200dp"
-        android:layout_height="65dp"
+        android:layout_height="100dp"
         android:layout_marginStart="6dp"
         android:layout_marginBottom="117dp"
         android:text="@string/textview"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,10 +80,11 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="200dp"
-        android:layout_height="65dp"
+        android:layout_height="100dp"
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="117dp"
         android:text="@string/textview"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
