--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -8,42 +8,43 @@
 
     <Button
         android:id="@+id/buttonOption4"
-        android:layout_width="187dp"
-        android:layout_height="109dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="39dp"
+        android:layout_width="400dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="8dp"
         android:text="OPTION4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonOption3"
-        app:layout_constraintTop_toBottomOf="@+id/buttonOption2" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonOption3" />
 
     <Button
         android:id="@+id/buttonOption3"
-        android:layout_width="187dp"
-        android:layout_height="109dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="39dp"
+        android:layout_width="400dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="8dp"
         android:text="OPTION3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonOption4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonOption1" />
+        app:layout_constraintBottom_toTopOf="@+id/buttonOption4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.997"
+        app:layout_constraintStart_toEndOf="@+id/buttonOption4"
+        app:layout_constraintTop_toBottomOf="@+id/buttonOption2" />
 
     <Button
         android:id="@+id/buttonOption2"
-        android:layout_width="187dp"
-        android:layout_height="109dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="400dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="8dp"
         android:text="OPTION2"
-        app:layout_constraintBottom_toTopOf="@+id/buttonOption4"
+        app:layout_constraintBottom_toTopOf="@+id/buttonOption3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonOption1"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonOption1" />
 
     <TextView
         android:id="@+id/questionView"
@@ -60,15 +61,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/progressBar3"
+        android:id="@+id/progressBarTimer"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="348dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:foregroundTint="@color/colorPrimaryDark"
-        android:indeterminate="true"
-        android:progress="@android:integer/config_shortAnimTime"
+        android:indeterminate="false"
+        android:max="30"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,29 +79,30 @@
 
     <Button
         android:id="@+id/buttonOption1"
-        android:layout_width="187dp"
-        android:layout_height="109dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="5dp"
+        android:layout_width="400dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="8dp"
         android:text="Option1"
-        app:layout_constraintBottom_toTopOf="@+id/buttonOption3"
-        app:layout_constraintEnd_toStartOf="@+id/buttonOption2"
+        app:layout_constraintBottom_toTopOf="@+id/buttonOption2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewTimer" />
 
     <TextView
         android:id="@+id/textViewTimer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="48dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="177dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="176dp"
-        android:layout_marginBottom="37dp"
+        android:layout_marginBottom="18dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/buttonOption2"
+        app:layout_constraintBottom_toTopOf="@+id/buttonOption1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar3" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBarTimer" />
 
 </android.support.constraint.ConstraintLayout>
