--- a/app/src/main/res/layout/activity_score_view.xml
+++ b/app/src/main/res/layout/activity_score_view.xml
@@ -9,13 +9,45 @@
     <ListView
         android:id="@+id/listViewScores"
         android:layout_width="395dp"
-        android:layout_height="587dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="413dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTop" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/rank1" />
+
+    <TextView
+        android:id="@+id/textViewRank"
+        android:layout_width="201dp"
+        android:layout_height="131dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="18dp"
+        android:text="TextView"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorRank"
+        app:layout_constraintBottom_toTopOf="@+id/textViewTop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewTop"
+        android:layout_width="113dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="157dp"
+        android:layout_marginEnd="141dp"
+        android:text="Top Scores"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        app:layout_constraintBottom_toTopOf="@+id/listViewScores"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewRank" />
 </android.support.constraint.ConstraintLayout>
